# JiPP2

./: CMakeLists.txt
Lab1/allocation_basics/: CMakeLists.txt  main.cpp
Lab1/simpleCalc/: CMakeLists.txt
Lab1/simpleCalc/include/: calc.h
Lab1/simpleCalc/src/: main.cpp
Lab10/: csvlib.h
Lab2/firstLib/src/: lib.cpp
Lab2/firstLibCall/: CMakeLists.txt
Lab2/firstLibCall/src/: main.cpp
Lab3/: CMakeLists.txt
Lab3/classesExercise/: CMakeLists.txt
Lab3/classesExercise/include/: Cuboid.h  (+4 more)
Lab3/firstClass/: CMakeLists.txt
Lab3/include/: func3.h
Lab3/src/: func3.cpp  main.cpp
Lab3/structExercise/: CMakeLists.txt
Lab4/classesExercise/: CMakeLists.txt
Lab4/firstClass/: CMakeLists.txt
Lab5/Homework/: CMakeLists.txt
Lab5/Homework1.2/: CMakeLists.txt
Lab6/Code/: CMakeLists.txt
Lab6/operatorsExercises/: CMakeLists.txt
Lab7/Dziedziczenie/: CMakeLists.txt
Lab7/Polimorfizm/: CMakeLists.txt
Lab8/: CMakeLists.txt
Lab8/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h
Lab8/src/: ListNote.cpp  Note.cpp  NoteDirector.cpp  TextNote.cpp  main.cpp
Lab9/: CMakeLists.txt
Lab9/src/: Stop.cpp  vExample.cpp
MatrixProject/matrixApp/: CMakeLists.txt
MatrixProject/matrixLib/: CMakeLists.txt
ProjektKoncowy/: CMakeLists.txt
ProjektKoncowy/include/: Actor.h  Scena.h  ScenaDialog.h  ScenaWalka.h
ProjektKoncowy/src/: Actor.cpp  Scena.cpp  ScenaDialog.cpp  ScenaWalka.cpp  main.cpp
firstLibCall/src/: main.cpp
simpelCalc/src/: calc.cpp  main.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
(+67 files in other folders)
