cmake_minimum_required(VERSION 3.16)

add_subdirectory(Lab1/allocation_basics)

add_subdirectory(Lab1/simpleCalc)

add_subdirectory(Lab2/firstLib)

add_subdirectory(Lab2/firstLibCall)

add_subdirectory(MatrixProject/matrixLib)

add_subdirectory(MatrixProject/matrixApp)

add_subdirectory(Lab3/firstClass)

add_subdirectory(Lab3/classesExercise)